feat: implement hero section with content, social icons, and profile image

--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,88 @@
         <a href="#project" class="hover:text-gray-400">Project</a>
       </div>
     </header>
+
+    <!-- hero section -->
+    <section class="hero-section" id="beranda">
+      <div
+        class="p-10 flex justify-around items-center sm:flex-col sm:text-center lg:flex-row lg:text-left max-sm:flex-col max-sm:text-center"
+      >
+        <div class="hero-content space-y-8">
+          <h1 class="text-5xl font-bold font-poppins">Hi There,</h1>
+          <h3 class="text-5xl font-bold font-poppins">
+            I'm <span>Rizki</span> <span>Suputro</span>
+          </h3>
+          <h5 class="text-3xl text-gray-500 font-poppins font-medium">
+            As Fresh Graduated
+          </h5>
+          <div
+            class="btn-group py-5 max-sm:grid max-sm:grid-cols-1 max-sm:gap-5"
+          >
+            <a
+              href="#"
+              class="p-5 px-8 bg-[#3B82F6] rounded-lg hover:bg-[#12479c]"
+              >Download CV</a
+            >
+            <a
+              href="#"
+              class="p-5 px-5 border border-[#3B82F6] rounded-lg hover:bg-[#3B82F6]"
+              >Tentang Saya</a
+            >
+          </div>
+          <div
+            class="media-social py-5 max-sm:grid max-sm:grid-cols-3 max-sm:gap-5 max-sm:text-center"
+          >
+            <!-- facebook -->
+            <a href="#" class="social-link"
+              ><iconify-icon
+                icon="ic:baseline-facebook"
+                width="48"
+                height="48"
+                style="color: #3b82f6"
+                class="p-3 border border-[#3B82F6] rounded-full hover:bg-[#4b586d]"
+              ></iconify-icon
+            ></a>
+            <!-- instagram  -->
+            <a href="#" class="social-link">
+              <iconify-icon
+                icon="line-md:instagram"
+                width="48"
+                height="48"
+                style="color: #3b82f6"
+                class="p-3 border border-[#3B82F6] rounded-full hover:bg-[#4b586d]"
+              ></iconify-icon>
+            </a>
+            <!-- github -->
+            <a href="#" class="social-link">
+              <iconify-icon
+                icon="mdi:github"
+                width="48"
+                height="48"
+                style="color: #3b82f6"
+                class="p-3 border border-[#3B82F6] rounded-full hover:bg-[#4b586d]"
+              ></iconify-icon>
+            </a>
+            <!-- linkedin -->
+            <a href="#" class="social-link">
+              <iconify-icon
+                icon="mdi:linkedin"
+                width="48"
+                height="48"
+                style="color: #3b82f6"
+                class="p-3 border border-[#3B82F6] rounded-full hover:bg-[#4b586d]"
+              ></iconify-icon>
+            </a>
+          </div>
+        </div>
+        <div class="hero-image">
+          <img
+            src="../images/rizki.jpeg"
+            class="w-auto h-auto img-fluid object-cover hover:scale-110 transform transition-all hover:opacity-50"
+            alt="profile"
+          />
+        </div>
+      </div>
+    </section>
     <script src="app.js"></script>
     <script src="https://code.iconify.design/iconify-icon/3.0.0/iconify-icon.min.js"></script>
   </body>
