feat: implement about me section with profile photo and descriptive text layout (responsive)

--- a/src/index.html
+++ b/src/index.html
@@ -138,6 +138,55 @@
         </div>
       </div>
     </section>
+
+    <!-- about me section -->
+    <section class="aboutme-section py-20" id="tentangsaya">
+      <h1 class="text-center text-4xl font-bold font-poppins max-sm:text-2xl">
+        Tentang Saya
+      </h1>
+
+      <div class="py-10">
+        <div
+          class="aboutme-content flex flex-col items-center gap-10 lg:flex-row lg:justify-center lg:gap-20"
+        >
+          <!-- Foto -->
+          <div class="aboutme-image">
+            <img
+              src="../images/rizki2.jpeg"
+              class="w-64 h-64 object-cover rounded-full shadow-lg"
+              alt="profile"
+            />
+          </div>
+
+          <!-- Teks -->
+          <div
+            class="aboutme-text max-w-2xl space-y-4 text-justify font-roboto sm:text-center lg:text-left max-sm:text-center max-sm:text-sm max-sm:max-w-xl"
+          >
+            <p>
+              Halo, saya Rizki Suputro, seorang fresh graduate SMK jurusan
+              Teknik Komputer & Jaringan (TKJ) yang memiliki minat besar di
+              dunia teknologi dan pengembangan web.
+            </p>
+
+            <p>
+              Selama masa studi, saya terbiasa mempelajari dasar-dasar jaringan
+              komputer, perakitan hardware, troubleshooting, hingga pengelolaan
+              sistem operasi. Selain itu, saya juga mulai mengembangkan
+              kemampuan di bidang pemrograman web sebagai bekal untuk karier
+              saya ke depan. Saya senang mempelajari hal-hal baru, beradaptasi
+              dengan cepat, dan mampu bekerja baik secara individu maupun dalam
+              tim.
+            </p>
+
+            <p>
+              Bagi saya, teknologi bukan hanya tentang perangkat keras dan
+              lunak, tetapi juga tentang bagaimana menciptakan solusi yang
+              bermanfaat untuk orang lain.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="app.js"></script>
     <script src="https://code.iconify.design/iconify-icon/3.0.0/iconify-icon.min.js"></script>
   </body>
