feat: implement skills section with technology cards

--- a/src/index.html
+++ b/src/index.html
@@ -187,6 +187,156 @@
         </div>
       </div>
     </section>
+
+    <!-- skill section -->
+    <section class="myskill-section bg-[#213147] lg:py-20 sm:py-10" id="skill">
+      <h1 class="text-center text-4xl font-bold font-poppins py-10 underline">
+        Skills
+      </h1>
+      <div
+        class="card-container grid lg:grid-cols-3 sm:grid-cols-1 sm:justify-center gap-x-20 gap-y-5 max-w-6xl mx-auto py-1 items-stretch max-sm:py-10"
+      >
+        <!-- card -->
+        <div
+          class="card lg:w-100 lg:h-auto bg-[#1E293B] rounded-lg flex flex-col justify-center items-center sm:w-full"
+        >
+          <div class="icons mb-6">
+            <iconify-icon
+              icon="vscode-icons:file-type-html"
+              width="48"
+              height="48"
+              class="p-3 border border-[#3B82F6] rounded-full"
+            ></iconify-icon>
+          </div>
+          <div class="text-content p-3 text-center">
+            <h2 class="text-2xl font-bold font-poppins mb-5">HTML</h2>
+            <p
+              class="font-medium font-poppins max-sm:text-sm max-sm:text-center"
+            >
+              Bahasa dasar untuk membangun struktur halaman web dengan elemen
+              semantik yang jelas, terorganisir, dan mudah dipahami oleh mesin
+              pencari modern.
+            </p>
+          </div>
+        </div>
+        <!-- card -->
+        <div
+          class="card lg:w-100 lg:h-auto bg-[#1E293B] rounded-lg flex flex-col justify-center items-center sm:w-full"
+        >
+          <div class="icons mb-6">
+            <iconify-icon
+              icon="devicon:css3"
+              width="48"
+              height="48"
+              class="p-3 border border-[#3B82F6] rounded-full"
+            ></iconify-icon>
+          </div>
+          <div class="text-content p-3 text-center">
+            <h2 class="text-2xl font-bold font-poppins mb-5">CSS</h2>
+            <p
+              class="font-medium font-poppins max-sm:text-sm max-sm:text-center"
+            >
+              Digunakan untuk mengatur tampilan halaman web agar lebih rapi,
+              menarik, konsisten, serta responsif pada berbagai ukuran layar
+              berbeda.
+            </p>
+          </div>
+        </div>
+        <!-- card -->
+        <div
+          class="card lg:w-100 lg:h-auto bg-[#1E293B] rounded-lg flex flex-col justify-center items-center sm:w-full"
+        >
+          <div class="icons mb-6">
+            <iconify-icon
+              icon="logos:javascript"
+              width="48"
+              height="48"
+              class="p-3 border border-[#3B82F6] rounded-full"
+            ></iconify-icon>
+          </div>
+          <div class="text-content p-3 text-center">
+            <h2 class="text-2xl font-bold font-poppins mb-5">JAVASCRIPT</h2>
+            <p
+              class="font-medium font-poppins max-sm:text-sm max-sm:text-center"
+            >
+              Bahasa pemrograman populer yang menambahkan interaktivitas,
+              animasi, dan logika dinamis sehingga halaman web terasa lebih
+              hidup dan responsif.
+            </p>
+          </div>
+        </div>
+        <!-- card -->
+        <div
+          class="card lg:w-100 lg:h-auto bg-[#1E293B] rounded-lg flex flex-col justify-center items-center sm:w-full"
+        >
+          <div class="icons mb-6">
+            <iconify-icon
+              icon="skill-icons:bootstrap"
+              width="48"
+              height="48"
+              class="p-3 border border-[#3B82F6] rounded-full"
+            ></iconify-icon>
+          </div>
+          <div class="text-content p-3 text-center">
+            <h2 class="text-2xl font-bold font-poppins mb-5">BOOSTRAP</h2>
+            <p
+              class="font-medium font-poppins max-sm:text-sm max-sm:text-center"
+            >
+              Framework CSS yang memudahkan pengembangan desain web modern
+              dengan komponen siap pakai, grid responsif, dan konsistensi lintas
+              perangkat.
+            </p>
+          </div>
+        </div>
+        <!-- card -->
+        <div
+          class="card lg:w-100 lg:h-auto bg-[#1E293B] rounded-lg flex flex-col justify-center items-center sm:w-full"
+        >
+          <div class="icons mb-6">
+            <iconify-icon
+              icon="devicon:tailwindcss"
+              width="48"
+              height="48"
+              class="p-3 border border-[#3B82F6] rounded-full"
+            ></iconify-icon>
+          </div>
+          <div class="text-content p-3 text-center">
+            <h2 class="text-2xl font-bold font-poppins mb-5">TAILWIND</h2>
+            <p
+              class="font-medium font-poppins max-sm:text-sm max-sm:text-center"
+            >
+              Utility-first CSS framework yang fleksibel, ringan, modern, serta
+              mendukung pengembangan cepat dengan class bawaan yang dapat
+              dikustomisasi penuh.
+            </p>
+          </div>
+        </div>
+        <!-- card -->
+        <div
+          class="card lg:w-100 lg:h-auto bg-[#1E293B] rounded-lg flex flex-col justify-center items-center sm:w-full"
+        >
+          <div class="icons mb-6">
+            <iconify-icon
+              icon="streamline-plump-color:graphic-template-website-ui-flat"
+              width="48"
+              height="48"
+              class="p-3 border border-[#3B82F6] rounded-full"
+            ></iconify-icon>
+          </div>
+          <div class="text-content p-3 text-center">
+            <h2 class="text-2xl font-bold font-poppins mb-5">Ui Design</h2>
+            <p
+              class="font-medium font-poppins max-sm:text-sm max-sm:text-center"
+            >
+              Proses merancang antarmuka pengguna yang estetis, fungsional,
+              konsisten, dan fokus pada pengalaman pengguna agar aplikasi lebih
+              nyaman digunakan.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="app.js"></script>
     <script src="https://code.iconify.design/iconify-icon/3.0.0/iconify-icon.min.js"></script>
   </body>
