feat: add project section with landing page preview and demo button

--- a/src/index.html
+++ b/src/index.html
@@ -337,6 +337,31 @@
       </div>
     </section>
 
+    <!-- project section -->
+    <section class="project-review py-10" id="project">
+      <h1 class="text-center text-4xl font-bold font-poppins">Project Saya</h1>
+      <div class="project-content py-20">
+        <div class="project">
+          <h1
+            class="text-2xl font-bold font-poppins text-center text-[#3B82F6]"
+          >
+            Simpel Landing Page
+          </h1>
+          <img
+            src="../images/website.png"
+            class="lg:max-w-6xl lg:h-full sm:w-auto img-fluid object-cover mx-auto py-10 transform transition-all hover:scale-110 hover:opacity-50 rounded-4xl"
+            alt="profile"
+          />
+        </div>
+        <div class="btn-demo flex justify-center">
+          <a
+            href="https://rizkixsuputro.github.io/Project-Landing-Page-JQUERY/"
+            class="p-5 px-20 py-5 font-bold mx-auto bg-[#3B82F6] rounded-lg hover:bg-[#12479c]"
+            >Demo</a
+          >
+        </div>
+      </div>
+    </section>
     <script src="app.js"></script>
     <script src="https://code.iconify.design/iconify-icon/3.0.0/iconify-icon.min.js"></script>
   </body>
