feat: implement footer with centered copyright text and background styling

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="no-scrollbar">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -362,6 +362,12 @@
         </div>
       </div>
     </section>
+
+    <!-- footer -->
+      <footer>
+    <div class="footer py-10 bg-[#213147] text-center">
+      <h1 class="text-xl font-medium font-poppins text-gray-500">copyright &copy; 2023 Rizki Suputro</h1>
+  </footer>
     <script src="app.js"></script>
     <script src="https://code.iconify.design/iconify-icon/3.0.0/iconify-icon.min.js"></script>
   </body>
