edit : source image

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </div>
         <div class="hero-image">
           <img
-            src="../images/rizki.jpeg"
+            src="./images/rizki.jpeg"
             class="w-auto h-auto img-fluid object-cover hover:scale-110 transform transition-all hover:opacity-50"
             alt="profile"
           />
@@ -152,7 +152,7 @@
           <!-- Foto -->
           <div class="aboutme-image">
             <img
-              src="../images/rizki2.jpeg"
+              src="./images/rizki2.jpeg"
               class="w-64 h-64 object-cover rounded-full shadow-lg"
               alt="profile"
             />
