--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             Simpel Landing Page
           </h1>
           <img
-            src="../images/website.png"
+            src="/images/website.png"
             class="lg:max-w-6xl lg:h-full sm:w-auto img-fluid object-cover mx-auto py-10 transform transition-all hover:scale-110 hover:opacity-50 rounded-4xl"
             alt="profile"
           />
